Wed Sep 22 14:17:11 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * debian/Basic_Logging_Service.sgml:
        * debian/Event_Logging_Service.sgml:
        * debian/Notify_Logging_Service.sgml:
        * debian/RTEvent_Logging_Service.sgml:
          Renamed TAO orb services. See $TAO_ROOT/NEWS for details.

Wed Sep 22 14:06:25 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * debian/libtao-orbsvcs-1.8.2.install:
        * debian/libtao-orbsvcs-dev.install:
        * debian/tao-imr.install:
        * debian/tao-naming.install:
        * debian/tao-notify.install:
        * debian/tao-rtevent.install:
          Renamed TAO orb services. See $TAO_ROOT/NEWS for details.

Wed Sep 22 13:58:46 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * debian/tao-concurrency.install:
        * debian/tao-event.install:
        * debian/tao-ft.install:
        * debian/tao-ifr.install:
        * debian/tao-lifecycle.install:
        * debian/tao-load.install:
        * debian/tao-log.install:
        * debian/tao-scheduling.install:
        * debian/tao-time.install:
        * debian/tao-trading.install:
          Renamed TAO orb services. See $TAO_ROOT/NEWS for details.

Tue Sep 21 08:27:47 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ASNMP/agent/main.cpp:
          Fixed compile error

Mon Sep 20 13:24:56 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ASNMP/agent/agent.mpc:
        * ASNMP/agent/main.cpp:
          Enable for wchar, thanks to Christian Freund <freund at wrz dot de>
          for reporting this and providing a patch, fixes bugzilla 3889

        * ace/String_Base.h:
        * apps/JAWS3/http/HTTP_Service_Handler.h:
        * apps/JAWS3/small/SS_Service_Handler.h:
          Fixed typo in comment

        * ace/config-win32-borland.h:
          Some updates based on QC emails

        * debian/libtao-dev.install:
        * debian/mpc-ace.install:
          Fixed paths
